# introspection-api

./: .dockerignore  .gitignore  .graphqlconfig  BUILD.bazel  Dockerfile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum  gqlgen.yml  main.go  server.go
.github/workflows/: ci-cd.yml  codeql-analysis.yml
app/: main.go  router.go
app/config/: config.go
app/graph/: pointer_of.go  resolver.go  schema.resolvers.go
app/graph/model/: models_gen.go
cmd/api/: main.go
graph/: api_environment.go  resolver.go  schema.graphqls  schema.resolvers.go
graph/model/: models_gen.go
infrastructure/components/: dynamodb.tf  provider.tf
infrastructure/components/local/: backend.tf  provider.tf
infrastructure/components/prod/: app_runner.tf  app_runner_ecr_role.tf  app_runner_instance_role.tf  backend.tf  ecr_repository.tf  github_actions_role.tf  github_actions_user.tf  identity_provider.tf  main.tf
infrastructure/remote-state/: main.tf  terraform.tf
infrastructure/remote-state/prod/: main.tf
internal/app/api/: router.go
internal/app/api/graph/: resolver.go  schema.graphqls  schema.resolvers.go
