load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/chadxz/my-api-golang
gazelle(name = "gazelle")

go_library(
    name = "my-api-golang_lib",
    srcs = ["main.go"],
    importpath = "github.com/chadxz/my-api-golang",
    visibility = ["//visibility:private"],
    deps = ["@com_github_graphql_go_graphql//:graphql"],
)

go_binary(
    name = "my-api-golang",
    embed = [":my-api-golang_lib"],
    visibility = ["//visibility:public"],
)
